--- a/content/themes/rolledesign/sass/features/_dark-mode.scss
+++ b/content/themes/rolledesign/sass/features/_dark-mode.scss
@@ -23,7 +23,7 @@
   --color-faded: rgba(255, 255, 255, .8);
   --color-alt-grey: rgba(255, 255, 255, .8);
   --color-toggled: #414850;
-  --color-pattens-blue: #eaf1f8;
+  --color-pattens-blue: #222324;
   --color-lynch: #677287;
 
   // Required brand colors
